fixed edit-pl spacing issue

--- a/react-app/src/components/LeftMenu/LeftMenu.css
+++ b/react-app/src/components/LeftMenu/LeftMenu.css
@@ -42,8 +42,8 @@ a.nav-active.active {
 
 .lm-nav-library img {
   height: 22px;
-  margin-right: 13px;
-  padding-left: 15px;
+  margin-right: 15px;
+  padding-left: 12px;
 }
 
 .lm-nav-home a,
